--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/jsonapi_extras": "^3.28",
         "drupal/paragraphs": "^1.20",
         "drupal/recipe_installer_kit": "^1-alpha6@alpha",
+        "drupal/simple_oauth": "^6.1",
         "drupal/webform": "@beta"
     },
     "require-dev": {
